--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
                     <div class="about-card">
                         <div class="card-icon">
-                            <i class="fas fa-target"></i>
+                            <i class="fas fa-briefcase"></i>
                         </div>
                         <h3>Professional Goals</h3>
                         <p>
