lidar mount design attached

--- a/index.html
+++ b/index.html
@@ -859,6 +859,46 @@
                   </div>
               </div>
 
+              <!-- Design 4: Custom Lidar Mount -->
+                  <div class="design-card">
+                      <div class="design-image"
+                          data-gallery="fs"
+                          data-images='["assets/designs/lidar.png", "assets/designs/lidar2.png", "assets/designs/lidar3.png", "assets/designs/lidar4.png"]'>
+                          <img src="assets/designs/lidar.png" alt="Custom Lidar Mount">
+                          <div class="design-overlay">
+                              <i class="fas fa-search-plus"></i>
+                          </div>
+                      </div>
+                      <div class="design-content">
+                          <h3>Custom Lidar Mount</h3>
+                          <p class="design-description">
+                                Designed a custom mount for a SICK LiDAR sensor, optimizing for vibration isolation and field of view. 
+                                Utilized SolidWorks for CAD modeling and ANSYS for FEA analysis to ensure structural integrity under dynamic loads.
+                          </p>
+                          <div class="design-specs">
+                              <div class="spec-item">
+                                  <i class="fas fa-wrench"></i>
+                                  <span>SolidWorks, ANSYS</span>
+                              </div>
+                              <div class="spec-item">
+                                  <i class="fas fa-cube"></i>
+                                  <span>Rapid prototyping</span>
+                              </div>
+                              <div class="spec-item">
+                                  <i class="fas fa-layer-group"></i>
+                                  <span>3D Printing</span>
+                              </div>
+                          </div>
+                          <div class="design-tags">
+                              <span class="design-tag">Modular Design</span>
+                              <span class="design-tag">FEA</span>
+                              <span class="design-tag">Sensor Integration</span>
+                              <span class="design-tag">Manufacturing</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+
               <div class="design-skills-section">
                   <h3>Design Tools & Methodologies</h3>
                   <div class="tool-grid">
